--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -3,7 +3,7 @@ name: Auto Cache Busting
 on:
   push:
     branches:
-      - main   # 你也可以改成你部署 GitHub Pages 的分支
+      - main
 
 jobs:
   cache-busting:
@@ -17,14 +17,18 @@ jobs:
         id: vars
         run: echo "VERSION=$(date +'%Y%m%d%H%M%S')" >> $GITHUB_ENV
 
-      - name: Replace version tag in HTML
+      - name: Replace version tag in HTML files
         run: |
-          sed -i "s/{{VERSION}}/${VERSION}/g" index.html
+          find . -name "*.html" -exec sed -i "s/{{VERSION}}/${VERSION}/g" {} \;
 
-      - name: Commit updated HTML
+      - name: Commit updated HTML files
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add index.html
+          git add .
           git commit -m "🔁 Update cache busting version ${VERSION}" || echo "No changes to commit"
-          git push
+
+      - name: Push changes to GitHub
+        run: |
+          git remote set-url origin https://github.com/${{ github.repository }}.git
+          git push https://${{ secrets.GH_TOKEN }}@github.com/${{ github.repository }}.git HEAD:main
